--- a/index.css
+++ b/index.css
@@ -91,11 +91,12 @@ body{
 }
 .text1{
     text-align: center;
+    font-family: sans-serif;
 }
 .footer {
-    align-items: center;
     justify-content: center;
-    display:flex;
+    flex-direction: row;
+    display: flex;
 }
 .main {
  display: flex; 
@@ -104,3 +105,8 @@ body{
 .nobullet {
     list-style-type: none;
 }
+@media only screen and (max-width: 600px) {
+    body {
+        grid-template-columns: 300px;
+        grid-template-rows: 1fr;
+    }
